Use trackmania.io api

--- a/WebSite/src/app/app.component.html
+++ b/WebSite/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      TrackRanking
+      Trackmania Yo
       <!-- Create routing menu on the right of the toolbar, whith map, user, profile -->
       <span class="spacer"></span>
       <button mat-icon-button [matMenuTriggerFor]="menu" color="secondary">
