--- a/WebSite/src/app/pages/map/map-infos/map-infos.component.scss
+++ b/WebSite/src/app/pages/map/map-infos/map-infos.component.scss
@@ -33,7 +33,7 @@
                 margin-bottom: auto;
             }
             .flag {
-                height: 1.2em;
+                height: 18px;
                 margin: 3px;
             }
         }
