--- a/WebSite/src/app/pages/map/map.component.html
+++ b/WebSite/src/app/pages/map/map.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="map">
-        <img class="map-thumb" src="https://trackmania-prod-storage-map-thumbnail.s3.eu-west-1.amazonaws.com/4e6cfdf3-d2ec-43d8-bd99-44f1a5016ee9.jpg">
+        <img class="map-thumb" [src]="map?.thumbnailUrl">
         <div class="map-infos">
-            <app-map-infos></app-map-infos>
+            <app-map-infos [map]="map"></app-map-infos>
         </div>
     </div>
-    <div class="chrono">
-        c
+    <div *ngIf="map" class="chrono">
+        <app-map-leaderboard [map]="map" [leaderboardUuid]="maps.days[1].leaderboarduid"></app-map-leaderboard>
     </div>
 </div>
