--- a/WebSite/src/app/pages/map/map.component.scss
+++ b/WebSite/src/app/pages/map/map.component.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
 
     .map {
-        width: 40%;
+        width: 30%;
         .map-thumb {
             width: calc(100% - 60px);
             margin: 10px 20px 10px 40px;
@@ -19,15 +19,16 @@
         }
     }
     .chrono {
-        width: 60%;
+        width: calc(70% - 40px);
+        margin: 20px;
     }
 }
-// https://trackmania-prod-storage-map-thumbnail.s3.eu-west-1.amazonaws.com/4e6cfdf3-d2ec-43d8-bd99-44f1a5016ee9.jpg
 
 @media screen and (max-width: 600px) {
     .container {
         flex-direction: column;
         .chrono {
+            margin: 10px;
             width: calc(100% - 20px);
         }
         .map {
