--- a/WebSite/src/app/pages/map/map.component.scss
+++ b/WebSite/src/app/pages/map/map.component.scss
@@ -17,6 +17,10 @@
             // height: auto;
             width: 100%;
         }
+
+        .back-button {
+            margin: 20px;
+        }
     }
     .chrono {
         width: calc(70% - 40px);
