--- a/WebSite/src/app/app.component.html
+++ b/WebSite/src/app/app.component.html
@@ -26,4 +26,4 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-<ng-http-loader></ng-http-loader>
+<!-- <ng-http-loader></ng-http-loader> -->
