--- a/WebSite/src/app/pages/map/map-infos/map-infos.component.html
+++ b/WebSite/src/app/pages/map/map-infos/map-infos.component.html
@@ -18,7 +18,7 @@
             <h4>By: {{ " " }}</h4>
             <img
               class="flag"
-              [src]="getFlagUrl(map!.authorplayer.zone?.flag || 'WOR')"
+              [src]="getFlagUrl(map!.authorplayer.zone)"
               alt=""
             />
             <div class="tag">
