--- a/WebSite/src/app/pages/map/map-leaderboard/map-leaderboard.component.html
+++ b/WebSite/src/app/pages/map/map-leaderboard/map-leaderboard.component.html
@@ -2,30 +2,30 @@
   <mat-label>Filter</mat-label>
   <input
     matInput
-    (keyup)="applyFilter($event)"
+    (keyup)="sortBySearchedUsername($event)"
     placeholder="Username"
     #input
   />
 </mat-form-field>
 
 <div class="example-container mat-elevation-z8">
-  <mat-table #table [dataSource]="dataSource" (scroll)="onTableScroll($event)">
+  <mat-table #table [dataSource]="showedDataSource" (scroll)="onTableScroll($event)">
     <!--- Note that these columns can be defined in any order.
             The actual rendered columns are set as a property on the row definition" -->
 
     <ng-container matColumnDef="position">
-        <mat-header-cell *matHeaderCellDef> Rank </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> N° </mat-header-cell>
         <mat-cell *matCellDef="let element; let i = index">{{i + 1}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="player">
       <mat-header-cell *matHeaderCellDef> Player </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <img class="flag" [src]="getFlagUrl(element.player.flag)" alt="">
-        <div class="tag">
+        <img *ngIf="element.player.zone" class="flag" [src]="getFlagUrl(element.player.zone)" alt="">
+        <div *ngIf="element.player.tag" class="tag">
             <lib-ng-colored-tm-text [text]="element.player.tag" [fontSize]="14"></lib-ng-colored-tm-text>
         </div>
-            {{ element.player.username }}
+        {{ element.player.name }}
         </mat-cell>
     </ng-container>
 
@@ -37,16 +37,16 @@
     <ng-container matColumnDef="medal">
       <mat-header-cell *matHeaderCellDef> Medal </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <img class="medal" [src]="getMedalImage(element.medal)">
+        <img class="medal" [src]="getMedalImage(calcMedal(element.time))">
         <div class="medalName">
-            {{ element.medal }}
+            {{ calcMedal(element.time) }}
         </div>
         </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="date">
       <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.date }} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{ dateFormatted(element.timestamp) }} </mat-cell>
     </ng-container>
 
     <mat-header-row
@@ -55,6 +55,6 @@
     <mat-row
       *matRowDef="let row; columns: displayedColumns"
       (click)="onRowClicked(row)"
-    ></mat-row>
+      ></mat-row>
   </mat-table>
 </div>
