spinner and put api on server hosted

--- a/WebSite/src/app/pages/color-tester/color-tester.component.html
+++ b/WebSite/src/app/pages/color-tester/color-tester.component.html
@@ -31,7 +31,7 @@
     [(ngModel)]="bgPercent"></mat-slider>
   </div>
 
-  <div class="colors">
+  <!-- <div class="colors">
     <div
       *ngFor="let array of colors; let z = index"
       class="array"
@@ -53,5 +53,5 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
