--- a/WebSite/src/app/pages/map/map.component.scss
+++ b/WebSite/src/app/pages/map/map.component.scss
@@ -1,5 +1,5 @@
 .container {
-    // height: calc(100% - 64px - 20px);
+    height: calc(100% - 64px - 20px);
     display: flex;
     margin: 10px;
     flex-direction: row;
@@ -25,6 +25,19 @@
     .chrono {
         width: calc(70% - 40px);
         margin: 20px;
+    }
+
+    .spinner {
+        // center the spinner
+        margin: 50px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .element {
+            width: 100px;
+            height: 100px;
+        }
     }
 }
 
