--- a/WebSite/src/app/pages/color-tester/color-tester.component.html
+++ b/WebSite/src/app/pages/color-tester/color-tester.component.html
@@ -19,6 +19,7 @@
       <lib-ng-colored-tm-text
         [text]="value"
         [fontSize]="20"
+        [dark_theme]="true"
       ></lib-ng-colored-tm-text>
     </div>
     <mat-slider
@@ -31,7 +32,7 @@
     [(ngModel)]="bgPercent"></mat-slider>
   </div>
 
-  <!-- <div class="colors">
+  <div class="colors">
     <div
       *ngFor="let array of colors; let z = index"
       class="array"
@@ -53,5 +54,5 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
